change text-transform in all app and fix double border issue

--- a/src/pages/edit-settings/edit-settings.scss
+++ b/src/pages/edit-settings/edit-settings.scss
@@ -1,4 +1,7 @@
 page-edit-settings {
+    .item.item-block .item-inner {
+        border-bottom:0.55px solid #c8c7cc;
+    }
     .form-title {
         margin: 0px;
         padding: 1em 0em 1em 8px;
