--- a/src/pages/logbook/logbook.scss
+++ b/src/pages/logbook/logbook.scss
@@ -36,3 +36,6 @@ page-logbook {
         background: rgba(0, 0, 0, 0.1);
     }
 }
+.item.item-block .item-inner {
+    border-bottom:none;
+}
